syntax = "proto3";

package arrebato.consumer.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/davidsbond/arrebato/internal/proto/arrebato/consumer/v1;consumer";

message TopicIndex {
  string topic = 1;
  string consumer_id = 2;
  uint64 index = 3;
  google.protobuf.Timestamp timestamp = 4;
}
